# dev-pdf-reading-skill

./: README.md  pyproject.toml
src/pdf_tool/: main.py
